src/test/test-models/bad/err-decl-vector-2.stan
data {
  vector[3,4] y;
}
model {
}
